[WebKitTestRunner] Forward WebContent termination reason https://bugs.webkit.org/show_bug.cgi?id=225818 <rdar://problem/78027164>

Reviewed by Chris Dumez.

* WebKitTestRunner/TestController.cpp:
(WTR::TestController::createOtherPage): Use didTerminate callback instead of didCrash callback.
(WTR::TestController::createWebViewWithOptions): Ditto.
(WTR::TestController::webProcessDidTerminate):
(WTR::TestController::processDidCrash): Renamed webProcessDidTerminate.
* WebKitTestRunner/TestController.h: Replace processDidCrash with webProcessDidTerminate.
* WebKitTestRunner/win/TestControllerWin.cpp:
(WTR::TestController::platformRunUntil):


Canonical link: https://commits.webkit.org/237761@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@277533 268f45cc-cd09-0410-ab3c-d52691b4dbfc