Tools/WebKitTestRunner/win/TestControllerWin.cpp
@@ -155,7 +155,7 @@ void TestController::platformRunUntil(bool& condition, WTF::Seconds timeout)
     // First, let the test harness know this happened so it won't think we've hung. But
     // make sure we don't exit just yet!
     m_shouldExitWhenWebProcessCrashes = false;
-    processDidCrash();
+    webProcessDidTerminate(kWKProcessTerminationReasonCrash);
     m_shouldExitWhenWebProcessCrashes = true;
 
     // Then spin a run loop until it finishes crashing to give time for a crash log to be saved. If
